<?xml version="1.0"?>
<package format="3">
  <name>udp_reliable_receiver</name>
  <version>0.0.1</version>
  <description>UDP reliable chunk receiver for ROS2 point cloud</description>

  <maintainer email="aiseon@example.com">aiseon</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
